id "em16-changes"
title "Election Manager 2016"
css ["css/main.css", "css/color-em16.css"]
template "templates/em16.template"
--
<div class="manual-screenshot-right">
  { image("em16-256.png") }
</div>

<div class="section">
  <h1>Previous Versions</h1>

  <p>This is a list of the new features/bug fixes from previous versions of Election Manager.</p>

  <h1>v1.x.x</h1>

  <ul>
	<li>this just a placeholder.</li>
  </ul>
</div>