@@ -3,6 +3,9 @@
   <title>Boaty McBoatface Simulator 2016</title>
   <link rel="stylesheet" href="../assets/css/main.css" type="text/css" />
   <link rel="stylesheet" href="../assets/css/color-lfg.css" type="text/css" />
+  <link rel="icon" type="image/png" href="../assets/favicon/lensflare-16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="../assets/favicon/lensflare-32.png" sizes="32x32" />
+  <link rel="apple-touch-icon" type="image/png" href="../assets/favicon/lensflare-152.png" sizes="152x152" />
 </head>
 <body>
 <div id="main">
