@@ -2,6 +2,11 @@ id "em16"
 title "Election Manager 2016"
 css ["css/main.css", "css/color-em16.css"]
 template "templates/em16.template"
+favicon [
+  [16, 'icon', 'favicon/em16-16.png'],
+  [32, 'icon', 'favicon/em16-32.png'],
+  [152, 'apple-touch-icon', 'favicon/em16-152.png']
+]
 --
 <table>
   <tr>
