@@ -2,6 +2,11 @@ id "tsc-manual"
 title "Tactical Space Command"
 css ["css/main.css", "css/color-tsc.css"]
 template "templates/tsc.template"
+favicon [
+  [16, 'icon', 'favicon/tsc-16.png'],
+  [32, 'icon', 'favicon/tsc-32.png'],
+  [152, 'apple-touch-icon', 'favicon/tsc-152.png']
+]
 manual_data [
   "Tactical Space Command Online Manual",
   "<p>Welcome to the TSC online manual.  This version of the manual is current
